--- a/public/index.html
+++ b/public/index.html
@@ -7,5 +7,17 @@
 </head>
 <body>
 
+<div class="main-container">
+    <section class="summary">
+        <header class="">
+            <h3>Pavel Maximov</h3>
+            <h1>Frontend developer</h1>
+            <h1>UX Designer</h1>
+            <p>Berlin, Germany</p>
+        </header>
+
+    </section>
+</div>
+
 </body>
 </html>
