- added fonts - added normilize.css - started implementing the responsive layout

--- a/public/index.html
+++ b/public/index.html
@@ -8,10 +8,14 @@
 <body>
 
 <div class="main-container">
-    <h3>Pavel Maximov</h3>
-    <h1>Frontend developer</h1>
-    <h1>UX Designer</h1>
-    <p>Berlin, Germany</p>
+    <div class="content">
+        <h2 class="txt-center">Pavel Maximov</h2>
+        <h1 class="txt-center">Frontend developer</h1>
+        <p class="txt-center">Berlin, Germany</p>
+        <div class="home_head-wrapper">
+            <img src="/img/home-head.png">
+        </div>
+    </div>
 </div>
 
 </body>
