- implementing responsive layout for desktop

--- a/public/index.html
+++ b/public/index.html
@@ -1,22 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>Pavel Maximov Portfolio - Frontend Developer - UX Designer</title>
     <link rel="stylesheet" type="text/css" href="/css/main.css">
 </head>
 <body>
 
 <div class="main-container">
-    <div class="content">
-        <h2 class="txt-center">Pavel Maximov</h2>
+        <h2 class="txt-center p-t-3">Pavel Maximov</h2>
         <h1 class="txt-center">Frontend developer</h1>
         <p class="txt-center">Berlin, Germany</p>
-        <div class="home_head-wrapper">
-            <img src="/img/home-head.png">
+    <div class="row m-t-3">
+        <p class="txt-center col-xs-3">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget
+            dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
+            Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.</p>
+        <div class="home_head-wrapper col-xs-6">
+            <img src="/img/home-head.png" class="img-fluid">
         </div>
+        <p class="txt-center col-xs-3">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget
+            dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
+            Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. </p>
     </div>
 </div>
 
+<!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>-->
+<!--<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/js/bootstrap.min.js" integrity="sha384-vZ2WRJMwsjRMW/8U7i6PWi6AlO1L79snBrmgiDpgIWJ82z8eA5lenwvxbMV1PAh7" crossorigin="anonymous"></script>-->
 </body>
 </html>
