Started implementing mobile layout

--- a/public/index.html
+++ b/public/index.html
@@ -15,13 +15,13 @@
         <h1 class="txt-center">Frontend developer</h1>
         <p class="txt-center">Berlin, Germany</p>
         <div class="row m-t-3">
-            <p class="txt-center col-xs-3">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget
+            <p class="txt-center col-md-3">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget
                 dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
                 Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.</p>
-            <div class="home_head-wrapper col-xs-6">
+            <div class="home_head-wrapper col-md-6">
                 <img src="/img/home-head.png" class="img-fluid">
             </div>
-            <p class="txt-center col-xs-3">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget
+            <p class="txt-center col-md-3">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget
                 dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
                 Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. </p>
         </div>
