--- a/public/index.html
+++ b/public/index.html
@@ -9,21 +9,49 @@
 </head>
 <body>
 
-<div class="main-container" id="main">
-    <div class="page-content container">
-        <h2 class="txt-center p-t-3">Pavel Maximov</h2>
-        <h1 class="txt-center">Frontend developer</h1>
-        <p class="txt-center">Berlin, Germany</p>
-        <div class="row m-t-3">
-            <p class="txt-center col-md-3">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget
-                dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
-                Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.</p>
-            <div class="home_head-wrapper col-md-6">
-                <img src="/img/home-head.png" class="img-fluid">
+<div class="main-container container-fluid" id="main">
+    <div class="page-content row row-offcanvas row-offcanvas-right">
+        <div class="col-xs-12 p-t-2">
+            <nav class="nav-top hidden-lg-up row-offcanvas row-offcanvas-right">
+                <h5 class="nav-top__title">Pavel Maximov</h5>
+                <h5 class="nav-top__title">Frontend Developer</h5>
+                <button type="button" class="nav-top__menu-button btn btn-primary btn-xs pull-xs-right" data-toggle="offcanvas">NAV</button>
+            </nav>
+            <div class="row">
+                <h2 class="text-xs-center p-t-3 col-xs-12">Pavel Maximov</h2>
+                <h1 class="text-xs-center col-xs-12">Frontend developer</h1>
+                <p class="text-xs-center col-xs-12">Berlin, Germany</p>
             </div>
-            <p class="txt-center col-md-3">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget
-                dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
-                Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. </p>
+            <div class="row">
+                <p class="text-xs-center col-xs-12 col-lg-3">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget
+                    dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
+                    Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.</p>
+                <div class="home_head-wrapper col-xs-12 col-lg-6">
+                    <img src="/img/home-head.png" class="img-fluid">
+                </div>
+                <p class="text-xs-center col-xs-12 col-lg-3">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget
+                    dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
+                    Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. </p>
+            </div>
+        </div>
+        <div class="mobile-nav-side sidebar-offcanvas" id="sidebar">
+            <div class="mobile-nav__links-wrapper p-t-3">
+                <div class="col-xs-12 p-t-3">
+                    <button href="#" class="btn btn-link btn-lg active">Link</button>
+                </div>
+                <div class="col-xs-12 p-t-3">
+                    <button href="#" class="btn btn-lg btn-link">Link</button>
+                </div>
+                <div class="col-xs-12 p-t-3">
+                    <button href="#" class="btn btn-lg btn-link">Link</button>
+                </div>
+                <div class="col-xs-12 p-t-3">
+                    <button href="#" class="btn btn-lg btn-link">Link</button>
+                </div>
+                <div class="col-xs-12 p-t-3">
+                    <button href="#" class="btn btn-lg btn-link">Link</button>
+                </div>
+            </div>
         </div>
     </div>
 </div>
