- implemented additional layout styles

--- a/public/index.html
+++ b/public/index.html
@@ -11,14 +11,17 @@
 
 <div class="main-container container-fluid" id="main">
     <div class="page-content row row-offcanvas row-offcanvas-right">
-        <div class="col-xs-12 p-t-2">
-            <nav class="nav-top hidden-lg-up row-offcanvas row-offcanvas-right">
+        <div class="col-xs-12">
+            <nav class="nav-top hidden-lg-up row-offcanvas row-offcanvas-right p-t-1 p-l-1">
                 <h5 class="nav-top__title">Pavel Maximov</h5>
                 <h5 class="nav-top__title">Frontend Developer</h5>
-                <button type="button" class="nav-top__menu-button btn btn-primary btn-xs pull-xs-right" data-toggle="offcanvas">NAV</button>
+                <button type="button" class="nav-top__menu-button btn btn-link pull-xs-right p-a-0" data-toggle="offcanvas">
+                    <svg class="icon-menu" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50" preserveAspectRatio="xMidYMid meet" width="50px" height="50px"><style>.st0{fill:#4e4f5a}</style><path class="st0" d="M9.5 17.7zM39.9 12.3h-.1.1zM17.1 18c1.1-.2 5.9 0 5.8-.2.7-.4 3.1.3 3.8-.1-.5 0 1-.3.5-.2.7 0 2.6-.1 3.7-.7 0 .1-.1.3-.2.4 3.1-.1 4.4.4 6.3-.3.5-.2 1 .6 1.8-.1.3-.3 1.2-4.5 1.2-4.5.1.2-1.3-.1-.2-.2-4.6-.4-10.5.2-15.4.4-3.9.1-11.8 1.6-15.1.1-.3 1.4.6 4.4.6 4.8-.2-.1-.3-.1-.3.1 1 .3 6.4-.3 7.5.5z"/><g><path class="st0" d="M39.5 22.5zM9.1 27.9h0zM31.9 22.2c-1.1.2-5.9 0-5.8.2-.7.4-3.1-.3-3.8.1.5 0-1 .3-.5.2-.7 0-2.6.1-3.7.7 0-.1.1-.3.2-.4-3.1.1-4.4-.4-6.3.3-.5.2-1-.6-1.8.1-.3.2-1.2 4.4-1.2 4.4-.1-.2 1.3.1.2.2 4.6.4 10.5-.2 15.4-.4 3.9-.1 11.8-1.6 15.1-.1.3-1.4-.6-4.4-.6-4.8.2.1.3.1.3-.1-1-.2-6.4.5-7.5-.4z"/></g><g><path class="st0" d="M9.5 37.7zM39.9 32.3h-.1.1zM17.1 38c1.1-.2 5.9 0 5.8-.2.7-.4 3.1.3 3.8-.1-.5 0 1-.3.5-.2.7 0 2.6-.1 3.7-.7 0 .1-.1.3-.2.4 3.1-.1 4.4.4 6.3-.3.5-.2 1 .6 1.8-.1.3-.3 1.2-4.5 1.2-4.5.1.2-1.3-.1-.2-.2-4.6-.4-10.5.2-15.4.4-3.9.1-11.8 1.6-15.1.1-.3 1.4.6 4.4.6 4.8-.2-.1-.3-.1-.3.1 1 .3 6.4-.3 7.5.5z"/></g></svg>
+                    <svg class="icon-x" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50" preserveAspectRatio="xMidYMid meet" width="50px" height="50px"><style>.st0{fill:#4e4f5a}</style><path class="st0" d="M14.2 39.1zM38.4 34.3zM38.1 34.2c0-.8-4.2-4.6-5.7-6.1l-1.2-1.2c-2.6-3.7-1.1-1.4-.2-5.3-.3.1-.3 0-.1-.3.5-.4 4-3.5 4.2-3.7.5-.6 1.6-1.5 1.7-1.8.1-.6-.6-5.2-1.6-5 .1 0-1.2 1-.3.1-1.4 1.2-2.3 2.2-3.6 3.7-1.6 1.8-5.9 7.7-7.1 5.6-.5-.5-1.5-2.1-3.2-2.5.1.3 0 .3-.3.1-.4-.5-3.5-4-3.7-4.2-.6-.5-1.5-1.6-1.8-1.7-.6-.1-5.2.6-5 1.6 0-.1 1 1.2.1.3 2.7 3.1 7.6 7.7 11.5 11-2.5 2.6-5.5 5.5-7.6 7.7-4.6 4.9-2.5 2.5.3 6.2 1.3 0 9.3-8.2 11.2-10.4 2.2 2.4 4.8 4.4 6.8 6.4 4.3 4.6 2.1 2.1 5.6-.5z"/></svg>
+                </button>
             </nav>
             <div class="row">
-                <h2 class="text-xs-center p-t-3 col-xs-12">Pavel Maximov</h2>
+                <h2 class="text-xs-center p-t-1 col-xs-12">Pavel Maximov</h2>
                 <h1 class="text-xs-center col-xs-12">Frontend developer</h1>
                 <p class="text-xs-center col-xs-12">Berlin, Germany</p>
             </div>
@@ -35,22 +38,12 @@
             </div>
         </div>
         <div class="mobile-nav-side sidebar-offcanvas" id="sidebar">
-            <div class="mobile-nav__links-wrapper p-t-3">
-                <div class="col-xs-12 p-t-3">
-                    <button href="#" class="btn btn-link btn-lg active">Link</button>
-                </div>
-                <div class="col-xs-12 p-t-3">
-                    <button href="#" class="btn btn-lg btn-link">Link</button>
-                </div>
-                <div class="col-xs-12 p-t-3">
-                    <button href="#" class="btn btn-lg btn-link">Link</button>
-                </div>
-                <div class="col-xs-12 p-t-3">
-                    <button href="#" class="btn btn-lg btn-link">Link</button>
-                </div>
-                <div class="col-xs-12 p-t-3">
-                    <button href="#" class="btn btn-lg btn-link">Link</button>
-                </div>
+            <div class="mobile-nav__links-wrapper">
+                <button href="#" class="btn-portfolio btn btn-lg btn-link active">Portfolio</button>
+                <button href="#" class="btn-skills btn btn-lg btn-link">Skills</button>
+                <button href="#" class="btn-experience btn btn-lg btn-link">Experience</button>
+                <button href="#" class="btn-about btn btn-lg btn-link">About</button>
+                <button href="#" class="btn-contact btn btn-lg btn-link">Contact</button>
             </div>
         </div>
     </div>
