--- a/public/portfolio.html
+++ b/public/portfolio.html
@@ -19,24 +19,54 @@
 </nav>
 <div class="main-container container-fluid" id="main">
     <div class="main-container__content row row-offcanvas row-offcanvas-right">
-        <div class="col-xs-12 text-xs-center">
-            <h2 class="text-xs-center col-xs-12 m-t-1">Pavel Maximov</h2>
-            <h1 class="text-xs-center color-secondary col-xs-12">Front-end developer</h1>
-            <p class="text-xs-center col-xs-12 p-b-2">
-                <svg class="icon-pin" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 15 20" width="15" height="20"><defs><style>.cls-1{fill:#343642}</style></defs><title>icon-pin</title><path class="cls-1" d="M4.12 1.8h.13s-.05-.04-.13 0zM4.82 17zM8.55 2.54z"/><path class="cls-1" d="M3.82 3.78a5.84 5.84 0 0 1 6.35-.67A5.85 5.85 0 0 1 13 8.65s-.32.62.11.43a34.46 34.46 0 0 1-4.35 7.73C8.4 17.35 8 18.29 7.22 18a4 4 0 0 1-1.27-1.47c-.46-.63-4.89-8.37-4.29-8.65-1.59.79-.09 3.77.41 4.81A39.38 39.38 0 0 0 6 18.37c-.34-.49.55.56.68.69s1 1 1.1.26a1.21 1.21 0 0 0 .05.35c.89-1.21 2.19-2.05 3-3.32C11 16 11.88 14 12.36 14a.78.78 0 0 0 0 .33 3.37 3.37 0 0 0 .54-1.13q0 .19-.17.12c.12-.17.91-1.45.64-1.37.44-.12.87-1.79.95-2.19a2.63 2.63 0 0 0-.05-.95c0-.1-.13-1.29.2-.8-.47-1.11-.23-2.37-.72-3.51a4.8 4.8 0 0 0-1.85-2.22 12.45 12.45 0 0 0-2.2-1.15C9.39 1 8.28.58 8.43 1c-.77-.49-1.84 0-2.59.25A.19.19 0 0 1 6 1.07a1.31 1.31 0 0 0-.37.06A1 1 0 0 0 6 1C5.12.92 2.55 2.37 2.52 3.37c-.06-.37.11-.37-.06-.11a5 5 0 0 0-.26.53 10.43 10.43 0 0 0-.54 1.55c-.12.49-.66 2.37.18 2.59.64.17 1.6-3.69 2.16-4.28 0 0-.32.3-.17.13 2.17-1.94-.27.28-.01 0zM9.47 10.42h-.06.06zM8.36 4.73zM7.61 9.57z"/><path class="cls-1" d="M8.87 9.05a2 2 0 0 1-2.37.22c-.2-.12-1.19-.84-1-.94s.07 0 0 .06c-.28.09.41-1.58.62-1.8a2 2 0 0 1 1.7-.67c.92.15 1.5 2 2.13 1.9s.57-1.14.43-1.51A2.78 2.78 0 0 0 9.15 5a2.63 2.63 0 0 0-1.28-.42 6.7 6.7 0 0 1-1 .5C7 4.69 5.81 5 5.69 5.11a2.69 2.69 0 0 0-1.07 1.12 1.37 1.37 0 0 0-.35 1 8.75 8.75 0 0 0-.08 1.12q-.33.4.06.52l.36.23c-.57.43 1 1.82 1.52 2a5.84 5.84 0 0 0 1.64.13c.12 0 1.21-.61 1.08-.4q-.15.06.06-.05c0 .27 0 .12.3-.07 0 0 .34-.42.32-.39a2.1 2.1 0 0 0 .47-.66c.2.23.18-.14.21-.47a1 1 0 0 0-.17-1c-.64-.7-.85.31-1.12.84-.11.1.1-.19 0 0-.63.54.08-.18-.05.02z"/></svg>
-                London based contractor
-            </p>
-            <img class="home-head" src="/img/home-head.png">
-            <div class="hire-me hidden-sm-down">
-                <div class="hire-me-button-wrapper">
-                    <button class="btn btn-link btn-block font-size-lg">Hire me!</button>
-                </div>
-                <p class="hire-me-text text-xs-center line-height-1-2">
-                    Next availability for contract<br/>
-                    <span class="hire-me-text-date">April 2016</span>
-                </p>
-            </div>
+        <div class="col-xs-12">
 
+
+
+            <div class="row">
+                    <!-- Nav tabs -->
+                    <ul class="col-md-12 nav nav-tabs" role="tablist">
+                        <li class="nav-item">
+                            <a class="nav-link active" data-toggle="tab" href="#home" role="tab">Front-end portfolio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" data-toggle="tab" href="#profile" role="tab">Design portfolio</a>
+                        </li>
+                    </ul>
+
+                    <!-- Tab panes -->
+                    <div class="col-md-12 tab-content">
+                        <div class="tab-pane active" id="home" role="tabpanel">
+                            <div class="row">
+                                <div class="col-md-8">
+                                    ciao ciao
+                                </div>
+                                <div class="col-md-4 p-a-0 p-t-3">
+                                    <h4 class="text-xs-center col-xs-12 m-t-6">Pavel Maximov</h4>
+                                    <h4 class="text-xs-center col-xs-12">Front-end developer</h4>
+                                    <h1 class="text-xs-center color-secondary col-xs-12">Portfolio</h1>
+
+                                    <img class="m-t-3" src="img/portfolio.png">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="tab-pane" id="profile" role="tabpanel">
+                            <div class="row">
+                                <div class="col-md-8">
+                                    ciao ciao
+                                </div>
+                                <div class="col-md-4 p-a-0 p-t-3">
+                                    <h4 class="text-xs-center col-xs-12 m-t-6">Pavel Maximov</h4>
+                                    <h4 class="text-xs-center col-xs-12">Front-end developer</h4>
+                                    <h1 class="text-xs-center color-secondary col-xs-12">Portfolio</h1>
+
+                                    <img class="m-t-3" src="img/portfolio-design.png">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+            </div>
             <div class="hidden-md-up m-t-4 m-b-3">
                 <div class="hire-me">
                     <h3 class="hire-me-button-wrapper color-secondary m-b-1">Hire me!</h3>
@@ -64,7 +94,8 @@
 </div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-<!--<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/js/bootstrap.min.js" integrity="sha384-vZ2WRJMwsjRMW/8U7i6PWi6AlO1L79snBrmgiDpgIWJ82z8eA5lenwvxbMV1PAh7" crossorigin="anonymous"></script>-->
+<script src="https://cdn.jsdelivr.net/tether/1.2.0/tether.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/js/bootstrap.min.js" integrity="sha384-vZ2WRJMwsjRMW/8U7i6PWi6AlO1L79snBrmgiDpgIWJ82z8eA5lenwvxbMV1PAh7" crossorigin="anonymous"></script>
 <script src="/js/back.js" ></script>
 
 </body>
