- implementing frontend portfolio

--- a/public/portfolio.html
+++ b/public/portfolio.html
@@ -32,14 +32,71 @@
                 <li class="nav-item">
                     <a class="portfolio__nav__button nav-link" data-toggle="tab" href="#profile" role="tab">Design portfolio</a>
                 </li>
+                <li class="nav-item">
+                    <a class="portfolio__nav__button nav-link" data-toggle="tab" href="#this-site" role="tab">About this site</a>
+                </li>
             </ul>
         </nav>
 
         <!-- Tab panes -->
         <div class="portfolio__wrapper tab-content">
             <article class="portfolio__content--frontend tab-pane active" id="home" role="tabpanel">
-                <div class="portfolio__projects">
-                    Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?
+                <div class="portfolio__list">
+                    <p class="portfolio__content__title">Last 10 projects I worked on:</p>
+                    <button class="portfolio__list__project">
+                        <img class="portfolio__list__project-img" src="img/portfolio/foodora-thumb.jpg">
+                        <span class="portfolio__list__project-name">Foodora</span>
+                        <span class="portfolio__list__project-type">e-commerce</span>
+                    </button>
+                    <button class="portfolio__list__project">
+                        <img class="portfolio__list__project-img" src="img/portfolio/foodora-thumb.jpg">
+                        <span class="portfolio__list__project-name">Burger King Delivery</span>
+                        <span class="portfolio__list__project-type">e-commerce</span>
+                    </button>
+                    <button class="portfolio__list__project">
+                        <img class="portfolio__list__project-img" src="img/portfolio/foodora-thumb.jpg">
+                        <span class="portfolio__list__project-name">Vendomo</span>
+                        <span class="portfolio__list__project-type">website</span>
+                    </button>
+                    <button class="portfolio__list__project">
+                        <img class="portfolio__list__project-img" src="img/portfolio/foodora-thumb.jpg">
+                        <span class="portfolio__list__project-name">UN SGCT Lab</span>
+                        <span class="portfolio__list__project-type">website</span>
+                    </button>
+                    <button class="portfolio__list__project">
+                        <img class="portfolio__list__project-img" src="img/portfolio/foodora-thumb.jpg">
+                        <span class="portfolio__list__project-name">UN IPO Programme</span>
+                        <span class="portfolio__list__project-type">website</span>
+                    </button>
+                    <button class="portfolio__list__project">
+                        <img class="portfolio__list__project-img" src="img/portfolio/foodora-thumb.jpg">
+                        <span class="portfolio__list__project-name">UN CBRN KMS</span>
+                        <span class="portfolio__list__project-type">e-learning</span>
+                    </button>
+                    <button class="portfolio__list__project">
+                        <img class="portfolio__list__project-img" src="img/portfolio/foodora-thumb.jpg">
+                        <span class="portfolio__list__project-name">Vaso di Pandora</span>
+                        <span class="portfolio__list__project-type">e-commerce</span>
+                    </button>
+                    <button class="portfolio__list__project">
+                        <img class="portfolio__list__project-img" src="img/portfolio/foodora-thumb.jpg">
+                        <span class="portfolio__list__project-name">Bagno milena</span>
+                        <span class="portfolio__list__project-type">website</span>
+                    </button>
+                    <button class="portfolio__list__project m-b-0">
+                        <img class="portfolio__list__project-img" src="img/portfolio/foodora-thumb.jpg">
+                        <span class="portfolio__list__project-name">Russian School</span>
+                        <span class="portfolio__list__project-type">website</span>
+                    </button>
+                    <button class="portfolio__list__project m-b-0">
+                        <img class="portfolio__list__project-img" src="img/portfolio/foodora-thumb.jpg">
+                        <span class="portfolio__list__project-name">Russian School</span>
+                        <span class="portfolio__list__project-type">website</span>
+                    </button>
+                    <br class="portfolio__content__title">
+                        I also worked on other 25+ websites, but those were scary times when IE5 was still around :)<br/>
+                        If you are curious, though, drop me a line, I'll send you some screen-shots.
+                    </p>
                 </div>
                 <header class="portfolio__header">
                     <h4 class="portfolio__header__name">Pavel Maximov</h4>
@@ -49,6 +106,7 @@
                     </figure>
                 </header>
             </article>
+
             <article class="portfolio__content--design tab-pane" id="profile" role="tabpanel">
                 <div class="portfolio__projects">
                     But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truth, the master-builder of human happiness. No one rejects, dislikes, or avoids pleasure itself, because it is pleasure, but because those who do not know how to pursue pleasure rationally encounter consequences that are extremely painful. Nor again is there anyone who loves or pursues or desires to obtain pain of itself, because it is pain, but because occasionally circumstances occur in which toil and pain can procure him some great pleasure. To take a trivial example, which of us ever undertakes laborious physical exercise, except to obtain some advantage from it?
@@ -58,6 +116,19 @@
                     <h1 class="portfolio__header__title">Front-end Portfolio</h1>
                     <figure class="portfolio__header__img-wrapper">
                         <img class="portfolio__header__img--design" src="img/portfolio-design.png">
+                    </figure>
+                </header>
+            </article>
+
+            <article class="portfolio__content--this-site tab-pane" id="this-site" role="tabpanel">
+                <div class="portfolio__projects">
+                    But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truth, the master-builder of human happiness. No one rejects, dislikes, or avoids pleasure itself, because it is pleasure, but because those who do not know how to pursue pleasure rationally encounter consequences that are extremely painful. Nor again is there anyone who?
+                </div>
+                <header class="portfolio__header">
+                    <h4 class="portfolio__header__name">Pavel Maximov</h4>
+                    <h1 class="portfolio__header__title">About this site</h1>
+                    <figure class="portfolio__header__img-wrapper">
+                        <img class="portfolio__header__img--design" src="img/home-head.png">
                     </figure>
                 </header>
             </article>
